--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="welcome-screen" id="welcomeScreen">
-    <h1> Welcome to <span>Planova</span></h1>
+    <h1>&#x2728; Welcome to <span>Planova</span></h1>
     <p>Your smart study time manager</p>
     <button onclick="startApp()">Get Started</button>
 </div>
@@ -27,7 +27,7 @@
         <button type="submit">Add Task</button>
     </form>
 
-    <h3>Your Tasks</h3>
+    <h3>&#x23F3;Your Tasks</h3>
     <ul id="taskList"></ul>
 	<p>Task is simple. Be better than yesterday</p>
 </div>
@@ -36,4 +36,5 @@
 
 <script src="script.js"></script>
 </body>
+
 </html>
