Update index.html 2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="welcome-screen" id="welcomeScreen">
     <h1>&#x2728; Welcome to <span>Planova</span></h1>
-    <p>Your smart study time manager</p>
+    <p>Your personal time management and study timetable app. Organize your tasks efficiently and enjoy soothing background sounds.</p>
     <button onclick="startApp()">Get Started</button>
 </div>
 
@@ -38,3 +38,4 @@
 </body>
 
 </html>
+
